# DRAGON

./: .gitignore  README.md  pyproject.toml
dragon/: __init__.py  cli.py  task.py
dragon/adapters/: __init__.py  base.py  claude_judge.py  heuristic.py  null.py  registry.py
dragon/core/: metrics.py  types.py
dragon/modules/action_guardrails/: task.py
dragon/modules/action_guardrails/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/cross_lingual_bypass/: task.py
dragon/modules/cross_lingual_bypass/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/grounding/: task.py
dragon/modules/grounding/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/ideological_censorship/: task.py
dragon/modules/ideological_censorship/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/jailbreak/: task.py
dragon/modules/jailbreak/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/pii_egress/: task.py
dragon/modules/pii_egress/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/prompt_injection/: task.py
dragon/modules/prompt_injection/dataset/: attacks.jsonl  benign.jsonl
dragon/modules/toxicity/: task.py
dragon/modules/toxicity/dataset/: attacks.jsonl  benign.jsonl
