[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragon"
version = "0.0.1"
description = "DRAGON — Diagnostic Robustness of AI Guardrails On NLP"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
